# extract-to-md

./: .gitignore  README.en.md  README.md  pyproject.toml
scripts/: extract-to-md.cmd
src/extract_to_md/: __init__.py  cli.py  diagnostics.py  extractors.py  utils.py
tests/: fixtures.py  test_cli.py  test_quality.py
